Conectados botones con el scrollbar
Se conectaron cada uno de los botones para mover el scrollbar a diferentes posiciones.

--- a/angular.json
+++ b/angular.json
@@ -122,7 +122,14 @@
             ],
             "styles": [
               "src/theme/variables.scss",
-              "src/global.scss"
+              "src/global.scss",
+              
+              "src/styles.css", 
+              "node_modules/ionicons/dist/css/ionicons.css",
+              "node_modules/@ionic/angular/css/normalize.css",
+              "node_modules/@ionic/angular/css/structure.css",
+              "node_modules/@ionic/angular/css/typography.css",
+              "node_modules/@ionic/angular/css/display.css"
             ],
             "scripts": []
           },
