--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,13 @@
-absl-py==1.0.0
-appdirs==1.4.4
-astunparse==1.6.3
-attrs==22.1.0
-beautifulsoup4==4.9.3
-boto3==1.26.58
-botocore==1.29.58
-cachetools==4.2.4
-certifi==2021.5.30
-charset-normalizer==2.0.3
-click==8.0.3
+click==8.1.7
+configparser-crypt==1.1.0
 cryptidy==1.2.2
-cycler==0.11.0
-distlib==0.3.6
 dnspython==2.4.2
-filelock==3.11.0
 Flask==2.0.2
-flatbuffers==2.0
-future==0.18.2
-gast==0.4.0
-google-auth==2.3.3
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet==1.0.0
-grpcio==1.41.1
-guizero==1.1.0
-h5py==3.5.0
-idna==3.2
-imageai==2.1.5
-imageio==2.22.2
-iniconfig==1.1.1
-install==1.3.5
-itsdangerous==2.0.1
+itsdangerous==2.1.2
 Jinja2==3.0.3
-jmespath==1.0.1
-joblib==1.2.0
-keras==2.7.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.2
-libclang==12.0.0
-lxml==4.6.4
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-networkx==2.6.3
-numpy==1.20.3
-oauthlib==3.1.1
-opencv-contrib-python==4.5.2.54
-opencv-python==4.6.0.66
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.2.4
-passlib==1.7.4
-phonenumbers==8.12.20
-Pillow==8.4.0
-pipenv==2023.3.20
-platformdirs==3.2.0
-pluggy==1.0.0
-proto-plus==1.22.3
-protobuf==4.24.3
-py==1.11.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+MarkupSafe==2.1.3
 pycryptodomex==3.19.0
 pymongo==4.5.0
-pyparsing==3.0.6
-pyperclip==1.8.1
-pytest==7.1.3
-pytest-qt==4.1.0
-python-dateutil==2.8.1
-pytz==2021.3
-PyWavelets==1.4.1
+python-dotenv==1.0.0
 PyYAML==6.0.1
-QDarkStyle==3.1
-QtPy==2.2.1
-requests==2.31.0
-requests-file==1.5.1
-requests-oauthlib==1.3.0
-rsa==4.7.2
-s3transfer==0.6.0
-schedule==1.0.0
-scikit-image==0.19.3
-scikit-learn==1.1.2
-scipy==1.7.2
-six==1.15.0
-soupsieve==2.2.1
-stdiomask==0.0.6
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.7.0
-tensorflow-estimator==2.7.0
-tensorflow-io-gcs-filesystem==0.22.0
-termcolor==1.1.0
-threadpoolctl==3.1.0
-tifffile==2022.10.10
-tomli==2.0.1
-torch==1.12.1
-typing-extensions==3.10.0.2
-urllib3==2.0.5
-virtualenv==20.21.0
-virtualenv-clone==0.5.7
 Werkzeug==2.0.2
-wrapt==1.13.3
