--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "angular-draggable-droppable": "^8.0.0",
     "file-saver": "^2.0.5",
+    "ionic": "^5.4.16",
     "ionic-tooltips": "^4.0.0-beta.0",
     "ionicons": "^7.0.0",
+    "ngx-drag-drop": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
