--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@
 /bazel-out
 
 # Node
-node_modules/*
-!node_modules/file-saver
+# node_modules/*
+# !node_modules/file-saver
 
 npm-debug.log
 yarn-error.log
