--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,7 @@
 /bazel-out
 
 # Node
-node_modules/*
-!node_modules/file-saver
-!node_modules/angular-draggable-droppable
+node_modules/
 
 npm-debug.log
 yarn-error.log
